tests/fixtures/invalid/bad-ket.ket
qubit q
if q == |102⟩ {
  H q
}
